Sat Sep 20 13:02:39 CEST 2014
x/gdm-2.20.11-i486-1_microlinux.txz: Added.
xap/evince-3.8.3-i486-1_microlinux.txz: Added.
xap/gnome-mplayer-1.0.8-i486-1_microlinux.txz: Added.
xfce/ristretto-0.6.3-i486-1_microlinux.txz: Added.
xap/audacious-3.4.2-i486-1_microlinux.txz: Rebuilt.
xap/audacious-plugins-3.4.2-i486-1_microlinux.txz: Rebuilt.
xap/asunder-2.3-i486-1_microlinux.txz: Added.
xap/catfish-0.3.2-noarch-1_microlinux.txz: Added.
xap/galculator-2.1.2-i486-1_microlinux.txz: Added.
xap/gcolor2-0.4-i486-1_microlinux.txz: Added.
xap/leafpad-0.8.18.1-i486-1_microlinux.txz: Added.
xap/openshot-1.4.3-i486-1_microlinux.txz: Added.
xap/brasero-3.11.3-i486-1_microlinux.txz: Added.
xfce/xarchiver-0.5.2-i486-1_microlinux.txz: Added.
xfce/thunar-archive-plugin-0.3.0-i486-1_microlinux.txz: Added.
xfce/xfce4-xkb-plugin-0.5.6-i486-1_microlinux.txz: Added.
+--------------------------+
Thu Sep 18 16:08:09 CEST 2014
xfce/aero-1.0-noarch-1_microlinux.txz: Added.
xfce/gtk-engines-2.20.2-i486-1_microlinux.txz: Added.
xfce/clearlooks-phenix-theme-20131129-noarch-1_microlinux.txz: Added.
xfce/xfwm4-theme-axe-1.0-noarch-1_microlinux.txz: Added.
xfce/gnome-colors-5.5.1-noarch-2_microlinux.txz: Added.
profile/user-settings-xfce-1.0-noarch-2_microlinux.txz: Added.
+--------------------------+