@@ -16,7 +16,6 @@ xap/catfish
 xap/galculator
 xap/gcolor2
 xap/leafpad
-xap/openshot
 xap/brasero
 xfce/xarchiver
 xfce/thunar-archive-plugin
