@@ -1,1 +1,0 @@
-openshot-*.tar.gz
