@@ -1,12 +1,0 @@
-        |-----handy-ruler-----------------------------------------------------|
-openshot: openshot (an open-source video editor)
-openshot: 
-openshot: OpenShot Video Editor(TM) is an open-source program that creates,
-openshot: modifies and edits video files.
-openshot:
-openshot:
-openshot:
-openshot:
-openshot:
-openshot:
-openshot: Package created by Niki Kovacs <info@microlinux.fr>
