@@ -1,3 +1,7 @@
+Thu Sep 25 10:03:30 CEST 2014
+xap/openshot-1.4.3-i486-1_microlinux.txz: Removed.
+  Moving to MLED 14.1 Base repository.
++--------------------------+
 Sat Sep 20 13:02:39 CEST 2014
 x/gdm-2.20.11-i486-1_microlinux.txz: Added.
 xap/evince-3.8.3-i486-1_microlinux.txz: Added.
